<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_ID"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_Name"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/et_address"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_contactNO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_contactNO"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="24dp">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveData"
            android:text="@string/btnSave"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showData"
            android:text="@string/btnShow"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnUPdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="updateData"
            android:text="@string/btnUpdate"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deleteData"
            android:text="@string/btnDelete"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>